# kaos

./: .gitignore  AST.hs  ASTToCore.hs  CAOS.hs  COPYING.txt  Chunk.hs  Core.hs  CoreToVirt.hs  Emit.hs  KaosM.hs  LiftST.hs  Main.hs  Makefile  NOTES  Parser.hs  RegAlloc.hs  Register.hs  Rename.hs  SeqT.hs  Setup.lhs  Slot.hs  SlotAlloc.hs  TODO  Transform.hs  Utils.hs  VirtRegister.hs  kaos.cabal  runtests.pl
contrib/vim/syntax/: kaos.vim
doc/: pipeline.txt
examples/: 99bottles.kaos  blockscope.k  caosloop.k  enum.k  fooobject.k  getset.k  inline.k  itermacro.k  kaos2caos2kaos.k  objvar.k  quadratic.kaos  simple.k  targzap.k  test.k
prelude/: attrbhvr.k  prelude.k
src/: AST.hs  ASTToCore.hs  CAOS.hs  Core.hs  CoreFuture.hs  CoreStorage.hs  CoreToVirt.hs  Emit.hs  KaosM.hs  Main.hs  Parser.hs  PrettyM.hs  Rename.hs  SeqT.hs  Slot.hs  Typecheck.hs  VirtRegister.hs  prelude.k
src/Kaos/: AST.hs  ASTToCore.hs  ASTTransforms.hs  AliasMap.hs  CAOS.hs  Compile.hs  Core.hs  CoreAccess.hs  CoreAlias.hs  CoreFold.hs  CoreFuture.hs  CoreInline.hs  CoreStorage.hs  CoreToVirt.hs  CoreTraverse.hs  Dump.hs  Emit.hs  KaosM.hs  Parser.hs  PrettyM.hs  RegAlloc.hs  Rename.hs  SeqT.hs  Slot.hs  Targ.hs  Toplevel.hs  Typecheck.hs  VirtRegister.hs
t/: 01simple.t  04macro.t  05inline.t  07codegen.t  10targ.t  15binops.t  15builtins.t  20macro.t  20script-classifiers.t
t/lib/Test/: Kaos.pm
