Name:           Kaos
Version:        0.01
License:        GPL
License-File:   COPYING
Author:         Bryan Donlan
Build-Depends:  base, mtl, haskell98, parsec
Synopsis:       Kaos Compiler

Executable:     kaos
Main-Is:        Main.hs
Hs-Source-Dirs: src
ghc-options:    -Wall -Werror
extensions:     MultiParamTypeClasses, UndecidableInstances, GeneralizedNewtypeDeriving, BangPatterns
